kubernetes/apps/infrastructure/couchdb/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: storage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - couchdb.placeholder.local
      secretName: couchdb-tls
  rules:
    - host: couchdb.placeholder.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-couchdb
                port:
                  number: 5984
